# distbatch-infer

./: .gitignore  CMakeLists.txt  README.md  REPORT.docx  REPORT.html  REPORT.md
docker/: Dockerfile  docker-compose.yml
kernels/: block.cu  block.cuh  gelu.cu  gelu.cuh  gemm.cu  gemm.cuh  softmax.cu  softmax.cuh  transpose.cu  transpose.cuh
proto/: infer.proto
results/: batch_scaling.csv  blocksize.csv  breakdown.csv  roofline.csv  seqlen_scaling.csv  worker_scaling.csv
scripts/: launch_workers.sh  plot.py  profile_ncu.sh  run_experiments.sh
src/: client.cpp  dispatcher.cpp  worker.cpp
tests/: bench_kernels.cu  ref_block.py  test_block.cu  test_kernels.cu
